--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 layout: default
 title: tesa fc
 description: aya jang lumpat, eweuh jang najong
-image: /assets/img/logo-1.png
+image: /assets/img/logo/logo-1_v2.png
 ---
