--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: page
 title: 404
 permalink: 404.html
-image: assets/img/logo-2.png
+image: assets/img/logo/logo-2_v2.png
 ---
 
 page not found
