--- a/matches.html
+++ b/matches.html
@@ -11,7 +11,7 @@ dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-Av
     <div class="row row-cols-1 g-3">
       {% for match in matches reversed %}
       <h6 class="d-block w-100 mb-0 text-uppercase text-center fw-bolder mb-0">{{ match.name }}</h6>
-      {% for item in match.items reversed %}
+      {% for item in match.items %} 
       <div class="col">
         <div class="card rounded-0 border-0 mb-3 shadow-sm">
           <div class="card-body py-3">
