--- a/partner.html
+++ b/partner.html
@@ -2,6 +2,7 @@
 layout: page
 title: partner
 description: official partner & apparel.
+image: /assets/img/logo/logo-1_v4.png
 ---
 
 <div class="row row-cols-2 g-2">
