--- a/matches.html
+++ b/matches.html
@@ -2,7 +2,7 @@
 layout: match
 header: header-matches
 title: matches
-dis-image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTY3CfEcpam9s-AvlbpcgLaeEk3WHumXwQ-sA&usqp=CAU
+image: /assets/img/logo/logo-1_v4.png
 ---
 
 <div class="bg-light pt-5">
