--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 layout: default
 title: news
 description:
-image: /logo-poster_3.png
+image: /assets/img/logo-poster_3.png
 ---
 
 <div class="bg-light pt-5">
