--- a/matches.html
+++ b/matches.html
@@ -2,7 +2,7 @@
 layout: match
 header: header-matches
 title: matches
-image: /assets/img/logo-poster_8.png
+image: /assets/img/logo-p
 ---
 
 <div class="bg-light pt-5">
