--- a/assets.html
+++ b/assets.html
@@ -3,8 +3,26 @@ layout: page
 title: assets
 description:
 image: /assets/img/logo-poster_5.png
+logos:
+  - name: logo 1
+    link: /assets/img/logo/logo-1_v4.png
+  - name: logo 2
+    link: /assets/img/logo/logo-2_v4.png
 ---
 
+<h2>Logo</h2>
+<div class="row row-cols-2 row-cols-md-3 g-2">
+  {% for logo in page.logo %}
+  <div class="col">
+    <div class="card-body">
+      <img src="{{ logo.link }}" alt="" class="card-img">
+    </div>
+  </div>
+  {% endfor %}
+</div>
+
+
+<!-- comment 
 <h2 class="border-bottom pb-1">Logo</h2>
 <h3 class="pt-3">Logo 1</h3>
 <div class="row row-cols-2 row-cols-md-3 g-2">
@@ -23,7 +41,8 @@ image: /assets/img/logo-poster_5.png
   {% endfor %}
   {% endfor %}
 </div>
-
+endcomment -->
+<!-- comment
 <h3 class="pt-3">Logo 2</h3>
 <div class="row row-cols-2 row-cols-md-3 g-2">
   {% assign logo-2 = site.data.assets.logo.logo-2 | group_by: "img-type" %}
@@ -41,7 +60,8 @@ image: /assets/img/logo-poster_5.png
   {% endfor %}
   {% endfor %}
 </div>
-
+endcomment -->
+<!-- comment
 <h2 class="border-bottom pt-5 pb-1">Photos</h2>
 <div class="row row-cols-2 g-2">
   {% assign photos = site.data.assets.photos | group_by: "name" %}
@@ -58,7 +78,7 @@ image: /assets/img/logo-poster_5.png
   {% endfor %}
   {% endfor %}
 </div>
-
+endcomment -->
 
 
 
