--- a/assets.html
+++ b/assets.html
@@ -12,7 +12,7 @@ logos:
 
 <h2>Logo</h2>
 <div class="row row-cols-2 row-cols-md-3 g-2">
-  {% for logo in page.logo %}
+  {% for logo in page.logos %}
   <div class="col">
     <div class="card-body">
       <img src="{{ logo.link }}" alt="" class="card-img">
