--- a/assets.html
+++ b/assets.html
@@ -14,7 +14,7 @@ logos:
 <div class="row row-cols-2 row-cols-md-3 g-2">
   {% for logo in page.logos %}
   <div class="col">
-    <div class="card rounded-0">
+    <div class="card bg-light rounded-0">
       <div class="card-body">
         <img src="{{ logo.link }}" alt="" class="card-img">
       </div>
