--- a/partner.html
+++ b/partner.html
@@ -11,7 +11,7 @@ image: /assets/img/logo-poster_6.png
   <h6 class="d-block w-100 fw-bolder text-uppercase mb-0 pt-3">{{ type.name }}</h6>
   {% for partner in type.items %}
   <div class="col">
-    <div class="card h-100 bg-light">
+    <div class="card h-100 rounded-0 bg-light">
       <div class="card-body">
         <img src="{{ partner.img }}" alt="" class="card-img">
       </div>
