--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@ image: /assets/img/logo-poster_3.png
 
 <div class="bg-light pt-5">
   <div class="container-sm">
-    <h6 class="text-uppercase fw-bolder mb-3">all news</h6>
+    <h1 class="text-uppercase fs-3 fw-bolder mb-3">all news</h1>
     <div class="row row-cols-1 row-cols-md-3 g-3">
       {% for post in site.posts %}
       <div class="col">
