--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title-header: tesa fc official site
-title: tesa fc
-description: aya jang lumpat, eweuh jang najong
+display-title-on-header: true
+title: tesa football club
+description: tesa fc official site
 image: /assets/img/logo-poster_1.png
 ---
