--- a/players.html
+++ b/players.html
@@ -10,7 +10,7 @@ image: /assets/img/logo-poster_1.png
     <div class="row row-cols-2 row-cols-md-4 g-3">
       {% assign roles = site.data.players_2022 | group_by: "position" %}
       {% for role in roles %}
-      <h1 class="d-block w-100 text-uppercase fs-3 fw-bold pt-5 mb-0">{{ role.name }}</h1>
+      <h1 class="d-block w-100 text-uppercase fs-3 fw-bolder mb-0">{{ role.name }}</h1>
       {% for player in role.items %}
       <div class="col" style="min-height: 16rem;">
         <div class="card h-100 text-white border-0 rounded-0">
