--- a/partner.html
+++ b/partner.html
@@ -1,5 +1,6 @@
 ---
 layout: page
+display-title-on-header: true
 title: partner
 description: official partner & apparel.
 image: /assets/img/logo-poster_6.png
