--- a/assets.html
+++ b/assets.html
@@ -11,7 +11,7 @@ logos:
     link: /assets/img/logo/logo-2_v4.png
 ---
 
-<h2>Logo</h2>
+<h1 class="text-uppercase fs-6 fw-bolder mb-0">Logo</h1>
 <div class="row row-cols-2 row-cols-md-3 g-2">
   {% for logo in page.logos %}
   <div class="col">
