--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ contact:
 <div class="row row-cols-3 row-cols-md-4 g-2">
   {% assign group = page.contact | group_by: "type" %}
   {% for type in group %}
-  <h6 class="d-block w-100 text-uppercase mb-0 pt-3 fw-bolder">{{ type.name }}</h6>
+  <h1 class="d-block w-100 text-uppercase fs-6 fw-bolder mb-0">{{ type.name }}</h1>
   {% for contact in type.items %}
   <div class="col">
     <div class="card rounded-0">
