--- a/news.html
+++ b/news.html
@@ -8,8 +8,8 @@ image: /assets/img/logo-poster_3.png
 
 <div class="bg-light pt-5">
   <div class="container-sm">
-    <h1 class="text-uppercase fs-3 fw-bolder mb-3">all news</h1>
-    <div class="row row-cols-1 row-cols-md-3 g-3">
+    <div class="row row-cols-1 row-cols-md-3 g-2">
+      <h1 class="text-uppercase fs-3 fw-bolder mb-0">all news</h1>
       {% for post in site.posts %}
       <div class="col">
         <div class="card h-100 border-0 rounded-0 shadow-sm">
@@ -17,9 +17,9 @@ image: /assets/img/logo-poster_3.png
           <img src="{{ post.image }}" alt="" class="card-img-top rounded-0">
           {% endif %}
           <div class="card-body">
-            <h5 class="card-title text-capitalize"><a href="{{ post.url }}" class="link-dark stretched-link text-decoration-none">{{ post.title }}</a></h5>
+            <h3 class="card-title text-capitalize mb-0"><a href="{{ post.url }}" class="link-dark stretched-link text-decoration-none">{{ post.title }}</a></h3>
             {% if post.description %}
-            <h6 class="card-subtitle text-capitalize text-secondary mb-3">{{ post.description }}</h6>
+            <h5 class="card-subtitle text-capitalize text-secondary mb-0">{{ post.description }}</h5>
             {% endif %}
             <small class="card-text text-secondary">{{ post.date | date_to_long_string }}</small>
           </div>
