--- a/partner.html
+++ b/partner.html
@@ -11,7 +11,7 @@ image: /assets/img/logo-poster_6.png
   {% for type in partner-group %}
   <h1 class="d-block w-100 fs-6 fw-bolder text-uppercase mb-0">{{ type.name }}</h1>
   {% for partner in type.items %}
-  <div class="col">
+  <div class="col mb-3">
     <div class="card h-100 rounded-0 bg-light">
       <div class="card-body">
         <img src="{{ partner.img }}" alt="" class="card-img">
