--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@ image: /assets/img/logo-poster_3.png
 <div class="bg-light pt-5">
   <div class="container-sm">
     <div class="row row-cols-1 row-cols-md-3 g-2">
-      <h1 class="text-uppercase fs-3 fw-bolder mb-0">all news</h1>
+      <h1 class="d-block w-100 text-uppercase fs-3 fw-bolder mb-0">all news</h1>
       {% for post in site.posts %}
       <div class="col">
         <div class="card h-100 border-0 rounded-0 shadow-sm">
