--- a/news.html
+++ b/news.html
@@ -9,12 +9,14 @@ image: /assets/img/logo-poster_3.png
 <div class="bg-light pt-5">
   <div class="container-sm">
     <div class="row row-cols-1 row-cols-md-3 g-2">
-      <h1 class="d-block w-100 text-uppercase fs-3 fw-bolder mb-0">all news</h1>
+      <h1 class="d-block w-100 text-uppercase fs-6 fw-bolder mb-0">all news</h1>
       {% for post in site.posts %}
       <div class="col">
         <div class="card h-100 border-0 rounded-0 shadow-sm">
           {% if post.image %}
-          <img src="{{ post.image }}" alt="" class="card-img-top rounded-0">
+          <div class="ratio ratio ratio-1x1">
+            <img src="{{ post.image }}" alt="" class="card-img-top rounded-0">
+          </div>
           {% endif %}
           <div class="card-body">
             <h3 class="card-title text-capitalize mb-0"><a href="{{ post.url }}" class="link-dark stretched-link text-decoration-none">{{ post.title }}</a></h3>
