--- a/teams.html
+++ b/teams.html
@@ -14,7 +14,7 @@ teams:
 ---
 
 <div class="py-5">
-  <div class="container">
+  <div class="container-sm">
     <div class="row row-cols-2 row-cols-md-3 g-3">
       {% for team in page.teams %}
       <div class="col">
