--- a/tesafc-senior.html
+++ b/tesafc-senior.html
@@ -10,13 +10,13 @@ teams: tesafc-senior
 <div class="py-5 text-white bg-dark">
   <div class="container">
     <h1 class="fs-3 text-uppercase fw-bolder mb-0">players</h1>
-    {% assign team = site.data.players_2022 | where: "teams", "{{ page.teams }}" %}
+    {% assign team = site.data.players_2022 | where: "teams", "tesafc-senior" %}
     {% assign positions = team | group_by: "position" %}
     <div class="row row-cols-2 row-cols-md-4 g-3">
-      {% for position in positions %}
-      <h6 class="d-block w-100 text-uppercase fw-bolder mb-0">{{ position.name }}</h6>
+      {% for role in positions %}
+      <h6 class="d-block w-100 text-uppercase fw-bolder mb-0">{{ role.name }}test</h6>
       {% endfor %}
-      {% for player in position.items %}
+      {% for player in role.items %}
       <div class="col">
         <div class="card border rounded-0 shadow-sm" style="min-height:16rem;">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/blank-pp.png | relative_url' }}{% endif %}" class="card-img border-0" alt="">
