--- a/tesafc-senior.html
+++ b/tesafc-senior.html
@@ -17,7 +17,7 @@ teams: tesafc-senior
       <h6 class="d-block w-100 text-uppercase fw-bolder mb-0">{{ role.name }}</h6>
       {% for player in role.items %}
       <div class="col">
-        <div class="card border rounded-0 shadow-sm" style="min-height:16rem;">
+        <div class="card border rounded-0 shadow-sm text-white bg-dark" style="min-height:16rem;">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/blank-pp.png | relative_url' }}{% endif %}" class="card-img border-0" alt="">
           <div class="card-img-overlay d-flex flex-column justify-content-between">
             <h2 class="card-text fw-bolder mb-0">{{ player.no-punggung }}</h2>
