--- a/tesafc-senior.html
+++ b/tesafc-senior.html
@@ -14,14 +14,14 @@ teams: tesafc-senior
     {% assign positions = team | group_by: "position" %}
     <div class="row row-cols-2 row-cols-md-4 g-3">
       {% for role in positions %}
-      <h6 class="d-block w-100 text-uppercase fw-bolder mb-0">{{ role.name }}</h6>
+      <h6 class="d-block w-100 text-uppercase fw-bolder pt-3 mb-0">{{ role.name }}</h6>
       {% for player in role.items %}
       <div class="col">
         <div class="card border rounded-0 shadow-sm" style="min-height:16rem;">
           <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/blank-pp.png | relative_url' }}{% endif %}" class="card-img border-0" alt="">
-          <div class="card-img-overlay d-flex flex-column justify-content-between text-white bg-dark">
+          <div class="card-img-overlay d-flex flex-column justify-content-between" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5));">
             <h2 class="card-text fw-bolder mb-0">{{ player.no-punggung }}</h2>
-            <a href="{{ player.profile-link | relative_url }}" class="card-text link-white stretched-link text-decoration-none fw-bolder text-uppercase lh-1 mb-0" alt="">{{ player.name }}</a>
+            <a href="{{ player.profile-link | relative_url }}" class="card-text link-light stretched-link text-decoration-none fw-bolder text-uppercase lh-1 mb-0" alt="">{{ player.name }}</a>
           </div>
         </div>
       </div>
