--- a/teams.html
+++ b/teams.html
@@ -18,9 +18,9 @@ teams:
     <div class="row row-cols-2 row-cols-md-3 g-3">
       {% for team in page.teams %}
       <div class="col">
-        <div class="card border shadow-sm rounded-0" style="min-height: 16rem;">
-          <div class="card-body">
-            <a href="{{ team.url | relative_url }}" alt="" class="card-text card-link link-dark text-decoration-none stretched-link text-uppercase">{{ team.name }}</a>
+        <div class="card text-white bg-dark border shadow-sm rounded-0" style="min-height: 16rem;">
+          <div class="card-body d-flex flex-column justify-content-end">
+            <a href="{{ team.url | relative_url }}" alt="" class="card-text fs-5 card-link link-dark text-decoration-none stretched-link text-uppercase">{{ team.name }}</a>
           </div>
         </div>
       </div>
