--- a/teams.html
+++ b/teams.html
@@ -20,7 +20,7 @@ teams:
       <div class="col">
         <div class="card text-white bg-dark border shadow-sm rounded-0" style="min-height: 16rem;">
           <div class="card-body d-flex flex-column justify-content-end">
-            <a href="{{ team.url | relative_url }}" alt="" class="card-text fs-5 card-link link-dark text-decoration-none stretched-link text-uppercase">{{ team.name }}</a>
+            <a href="{{ team.url | relative_url }}" alt="" class="card-text fs-5 card-link link-light text-decoration-none stretched-link text-uppercase">{{ team.name }}</a>
           </div>
         </div>
       </div>
