--- a/teams.html
+++ b/teams.html
@@ -13,14 +13,14 @@ teams:
     url: /putri-tesafc
 ---
 
-<div class="py-5">
+<div class="py-5 text-white bg-dark">
   <div class="container-sm">
     <div class="row row-cols-2 row-cols-md-3 g-3">
       {% for team in page.teams %}
       <div class="col">
-        <div class="card text-white bg-dark border shadow-sm rounded-0" style="min-height: 16rem;">
-          <div class="card-body d-flex flex-column justify-content-end">
-            <a href="{{ team.url | relative_url }}" alt="" class="card-text fs-5 card-link link-light text-decoration-none stretched-link text-uppercase">{{ team.name }}</a>
+        <div class="card text-white bg-dark border border-light shadow-sm rounded-0" style="min-height: 16rem;">
+          <div class="card-body d-flex flex-column justify-content-end p-1">
+            <a href="{{ team.url | relative_url }}" alt="" class="card-text fs-5 card-link link-light text-decoration-none stretched-link text-uppercase fw-bolder">{{ team.name }}</a>
           </div>
         </div>
       </div>
