--- a/tesafc-senior.html
+++ b/tesafc-senior.html
@@ -4,7 +4,7 @@ display-title-on-header: true
 title: tesa fc senior
 description:
 image:
-teams: tesafc-senior
+teams: "tesafc-senior"
 ---
 
 <div class="py-5 text-white bg-dark">
