--- a/teams.html
+++ b/teams.html
@@ -13,12 +13,12 @@ teams:
     url: /putri-tesafc
 ---
 
-<div class="py-3 text-white bg-dark">
+<div class="py-5 text-white bg-dark">
   <div class="container-sm">
     <div class="row row-cols-2 row-cols-md-3 g-3">
       {% for team in page.teams %}
       <div class="col">
-        <div class="card text-white border border-light shadow-sm rounded-0" style="min-height: 16rem; background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5));">
+        <div class="card text-white shadow-sm rounded-0" style="min-height: 16rem; background-image: linear-gradient(to top right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4));">
           <div class="card-body d-flex flex-column justify-content-end p-2">
             <a href="{{ team.url | relative_url }}" alt="" class="card-text fs-5 card-link link-light text-decoration-none stretched-link text-uppercase fw-bolder">{{ team.name }}</a>
           </div>
