--- a/tesafc-senior.html
+++ b/tesafc-senior.html
@@ -1,12 +1,12 @@
 ---
-layout: default
+layout: team
 display-title-on-header: true
 title: tesa fc senior
 description:
 image:
-teams: "tesafc-senior"
+teams: tesafc-senior
 ---
-
+<!--
 <div class="py-5 text-white bg-dark">
   <div class="container">
     <h1 class="fs-3 text-uppercase fw-bolder mb-0">players</h1>
@@ -31,3 +31,4 @@ teams: "tesafc-senior"
     </div>
   </div>
 </div>
+-->
