--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 display-title-on-header: true
 title: tesa football club
 description: tesa fc official site
-image: /assets/img/logo-poster_1.png
+image-header: /assets/img/logo-poster_1.png
 ---
