--- a/matches-v2.html
+++ b/matches-v2.html
@@ -34,15 +34,13 @@ image:
                 <div class="col-2">
                   <img src="{% if match.away.logo %}{{ match.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" class="border-0" alt="" width="30" height="30">
                 </div>
+                <div class="col-3">
+                  <small class="float-end lh-1">{{ match.home.name }}</small>
+                </div>
               </div>
               <p class="card-text text-center text-capitalize mb-0">{{ match.place }}</p>
             </div>
           </div>
-          {% unless match.status == empty %}
-          <div class="col">
-            <p class="text-center mb-0">no matches</p>
-          </div>
-          {% endunless %}
         </div>
         {% endfor %}
       {% endfor %}
