--- a/matches-v2.html
+++ b/matches-v2.html
@@ -15,7 +15,7 @@ image:
       <h6 class="text-uppercase mb-0">{{ matches.name }}</h6>
         {% for match in matches.items reversed %}
         <div class="col">
-          <div class="card border-0 rounded-0 shadow-sm">
+          <div class="card text-dark border-0 rounded-0 shadow-sm">
             <div class="card-body">
               <p class="card-text text-center text-uppercase mb-0">{{ match.type }} • {{ match.competition }}</p>
               <p class="card-text text-center text-uppercase mb-0">{{ match.kickoff }}</p>
@@ -35,7 +35,7 @@ image:
                   <img src="{% if match.away.logo %}{{ match.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" class="border-0" alt="" width="30" height="30">
                 </div>
                 <div class="col-3">
-                  <small class="float-end lh-1">{{ match.home.name }}</small>
+                  <small class="float-start lh-1">{{ match.away.name }}</small>
                 </div>
               </div>
               <p class="card-text text-center text-capitalize mb-0">{{ match.place }}</p>
