--- a/matches-v2.html
+++ b/matches-v2.html
@@ -19,7 +19,7 @@ image:
             <div class="card-body">
               <p class="card-text text-center text-uppercase mb-0">{{ match.type }} • {{ match.competition }}</p>
               <p class="card-text text-center text-uppercase mb-0">{{ match.kickoff }}</p>
-              <div class="row row-cols-5 g-0 d-flex justify-content-around align-items-center text-uppercase">
+              <div class="row row-cols-5 g-0 d-flex justify-content-around align-items-center text-center text-uppercase">
                 <div class="col-3">
                   <small class="float-end lh-1">{{ match.home.name }}</small>
                 </div>
