--- a/matches-v2.html
+++ b/matches-v2.html
@@ -38,10 +38,10 @@ image:
                   <small class="float-start lh-1">{{ match.away.name }}</small> 
                 </div>
               </div>
-              <a href="{{ match.url }}" class="card-text text-center text-capitalize stretched-link link-dark text-decoration-none mb-0">{{ match.place }}</a>
+              <a href="{{ match.url }}" class="d-block card-text text-center text-capitalize stretched-link link-dark text-decoration-none mb-0">{{ match.place }}</a>
             </div>
             {% assign next-match = match | where: "status", "next match" %}
-            {% if next-match == nil %}
+            {% if next-match == empty %}
             <p class="card-text text-center mb-0">no match available</p>
             {% endif %}
           </div>
