--- a/matches-v2.html
+++ b/matches-v2.html
@@ -40,7 +40,7 @@ image:
               </div>
               <a href="{{ match.url }}" class="d-block card-text text-center text-capitalize stretched-link link-dark text-decoration-none mb-0">{{ match.place }}</a>
             </div>
-            {% assign next-match = match | where: "status", "next match" %}
+            {% assign next-match = site.matches | where: "status", "next match" %}
             {% if next-match == empty %}
             <p class="card-text text-center mb-0">no match available</p>
             {% endif %}
