--- a/matches-v2.html
+++ b/matches-v2.html
@@ -41,7 +41,7 @@ image:
               <a href="{{ match.url }}" class="d-block card-text text-center text-capitalize stretched-link link-dark text-decoration-none mb-0">{{ match.place }}</a>
             </div>
             {% assign next-match = site.matches | where: "status", "next match" %}
-            {% if next-match == empty %}
+            {% if next-match == nil %}
             <p class="card-text text-center mb-0">no match available</p>
             {% endif %}
           </div>
