--- a/matches-v2.html
+++ b/matches-v2.html
@@ -7,21 +7,21 @@ image:
 ---
 
 <div class="pt-3 pb-5 text-white bg-dark">
-  <div class="container">
+  <div class="container-sm">
     <h1 class="fs-3 text-uppercase mb-0">matchplan</h1>
       {% assign all-matches = site.matches | group_by: "status" %}
       <div class="row row-cols-1 g-3">
       {% for matches in all-matches reversed %}
-      <h6 class="text-uppercase mb-0">{{ matches.name }}</h6>
+      <h6 class="text-uppercase pt-3 mb-0">{{ matches.name }}</h6>
         {% for match in matches.items reversed %}
         <div class="col">
           <div class="card text-dark border-0 rounded-0 shadow-sm">
-            <div class="card-body">
+            <div class="card-body py-3">
               <p class="card-text text-center text-uppercase fw-bolder mb-0"><small>{{ match.type }}{{ match.competition | prepend: " • " }}{{ match.matchday | prepend: " • " }}</small></p>
               <p class="card-text text-center text-uppercase mb-0">{{ match.kickoff }}</p>
               <div class="row row-cols-5 g-0 d-flex justify-content-around align-items-center text-center text-uppercase">
                 <div class="col-3">
-                  <small class="float-end lh-1">{{ match.home.name }}</small>
+                  <small class="float-end lh-1 fw-bolder">{{ match.home.name }}</small>
                 </div>
                 <div class="col-2">
                   <img src="{% if match.home.logo %}{{ match.home.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" class="border-0" alt="" width="30" height="30">
@@ -35,7 +35,7 @@ image:
                   <img src="{% if match.away.logo %}{{ match.away.logo }}{% else %}{{ '/assets/img/logo/logo-blank.svg' | relative_url }}{% endif %}" class="border-0" alt="" width="30" height="30">
                 </div>
                 <div class="col-3">
-                  <small class="float-start lh-1">{{ match.away.name }}</small> 
+                  <small class="float-start lh-1 fw-bolder">{{ match.away.name }}</small> 
                 </div>
               </div>
               <a href="{{ match.url }}" class="d-block card-text text-center text-capitalize stretched-link link-dark text-decoration-none mb-0">{{ match.place }}</a>
