--- a/teams.html
+++ b/teams.html
@@ -9,8 +9,8 @@ teams:
     url: /tesafc-senior
   - name: tesa fc junior
     url: /tesafc-junior
-  - name: putri tesa fc
-    url: /putri-tesafc
+  - name: tesa fc putri
+    url: /tesafc-putri
 ---
 
 <div class="pt-3 pb-5 text-white bg-dark">
