Update and rename putri-tesafc.html to tesafc-putri.html

--- a/tesafc-putri.html
+++ b/tesafc-putri.html
@@ -1,8 +1,8 @@
 ---
 layout: team
 display-title-on-header: true
-title: putri tesa fc
+title: tesa fc putri
 description:
 image:
-teams: putri-tesafc
+teams: tesafc-putri
 ---
